syntax = "proto3";

package v1;
option go_package = "github.com/Hinkku-Company/aphrodite_monolite/src/shared/grpc/v1";

message Empty {}

message Pagination {
    int64 total = 1;
}

message Filter {}

// LOGIN
message AccessResponse {
    string token = 1;
    string token_refresh = 2;
}

message CredentialsInput {
  string user_name = 1;
  string password = 2; 
}

message TokenAccessInput {
  string token = 1;
  string token_refresh = 2;
}

// USER
message UserResponse {
    string id = 1;
    string name = 2;
    string type_user = 3;
    string email = 4;
}

message UserInput {
    string id = 1;
}

message ListUserResponse {
    repeated UserResponse items = 1;
}